# cpp_result

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classcpp__result_1_1Result-members.html  classcpp__result_1_1Result.html  classcpp__result_1_1Result.js  classcpp__result_1_1Result_3_01void_00_01E_01_4-members.html  classcpp__result_1_1Result_3_01void_00_01E_01_4.html  classcpp__result_1_1Result_3_01void_00_01E_01_4.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  index.html  menudata.js  meson.build  meson_options.txt  namespacecpp__result.html  namespacecpp__result.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  result_8hpp.html  result_8hpp.js  result_8hpp_source.html
.github/workflows/: documentation.yaml
bench/: bench_try_macros.cpp  benchmark.cpp
docs/: header.html  meson-doxygen.sh
examples/: advanced.cpp  usage.cpp
include/: result.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js
tests/: result_tests.cpp
